--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.1', '.']
-  
+
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.1']
 
@@ -14,14 +14,15 @@ steps:
 
         # Create or update the instance
         gcloud compute instances create-with-container fastapi-backend-instance \
-          --zone asia-northeast3  \
-          --container-image asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.0 \
+          --zone asia-northeast3 \
+          --container-image asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.1 \
           --container-arg '--env' \
-          --container-env-file ./.env.docker \
+          --container-env-file './.env.docker' \
           --container-port 8000 \
           --restart-on-failure \
           --tags http-server \
           --machine-type e2-standard-2 \
           --network default
+
 options:
   logging: CLOUD_LOGGING_ONLY
