--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,9 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.6', '.']
+    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.7', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.6']
+    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.7']
 
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
@@ -12,9 +12,9 @@ steps:
       - |
         gcloud compute instances stop welspy-fastapi-backend --zone asia-northeast3-a || true
 
-        gcloud compute instances create-with-container welpy-fastapi-backend \
+        gcloud compute instances create-with-container welspy-fastapi-backend \
           --zone asia-northeast3-a \
-          --container-image asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.6 \
+          --container-image asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.7 \
 
 options:
   logging: CLOUD_LOGGING_ONLY
