--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,21 +1,24 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.8', '.']
+    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.9', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.8']
+    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.9']
 
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        gcloud compute instances stop welspy-fastapi-backend --zone asia-northeast3-a || true
+        gcloud secrets versions access latest --secret=env-docker > .env.docker
 
-        gcloud compute instances create-with-container welspy-fastapi-backend \
-          --zone asia-northeast3-a \
-          --container-image asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.8 \
-          --tags http-server
+        # SSH로 인스턴스에 접속하여 Docker Compose 실행
+        gcloud compute ssh welpy-fastapi-backend --zone asia-northeast3-a --command "
+          cd welspy-fastapi-backend/ && \
+          docker-compose down && \
+          docker-compose pull && \
+          docker-compose up
+        "
 
 options:
   logging: CLOUD_LOGGING_ONLY
