--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,9 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.9', '.']
+    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.0', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:0.9']
+    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.0']
 
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
@@ -13,7 +13,7 @@ steps:
         gcloud secrets versions access latest --secret=env-docker > .env.docker
 
         # SSH로 인스턴스에 접속하여 Docker Compose 실행
-        gcloud compute ssh welpy-fastapi-backend --zone asia-northeast3-a --command "
+        gcloud compute ssh welspy-fastapi-backend --zone asia-northeast3-a --command "
           cd welspy-fastapi-backend/ && \
           docker-compose down && \
           docker-compose pull && \
