--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,9 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.0', '.']
+    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.1', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.0']
+    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.1']
 
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
@@ -14,7 +14,7 @@ steps:
 
         # SSH로 인스턴스에 접속하여 Docker Compose 실행
         gcloud compute ssh welspy-fastapi-backend --zone asia-northeast3-a --command "
-          cd welspy-fastapi-backend/ && \
+          cd /home/moonwlsdnl/welspy-fastapi-backend/ && \
           docker-compose down && \
           docker-compose pull && \
           docker-compose up
