--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,22 @@
 services:
   fastapi-backend:
     build:
-      image: asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.2
       context: .
       dockerfile: Dockerfile
+    image: asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.3
     platform: linux/x86_64
     ports:
       - 8000:8000
+    env_file:
+      - ./.env.docker
+    depends_on:
+      - redis
+
+  fastapi-backend-old:
+    image: asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.2
+    platform: linux/x86_64
+    ports:
+      - "8001:8000"
     env_file:
       - ./.env.docker
     depends_on:
