--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,9 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.3', '.']
+    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.4', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.3']
+    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.4']
 
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
@@ -18,8 +18,8 @@ steps:
           docker-compose pull && \
           docker-compose up -d fastapi-backend && \
           sleep 30 && \
-          docker-compose stop fastapi-backend-old && \
-          docker-compose rm -f fastapi-backend-old
+          docker-compose stop fastapi-backend-old || true && \
+          docker-compose rm -f fastapi-backend-old || true
         "
     timeout: 500s
 
