--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,9 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.6', '.']
+    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.7', '.']
 
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.6']
+    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:1.7']
 
   - name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: 'bash'
@@ -15,7 +15,7 @@ steps:
         # SSH로 인스턴스에 접속하여 무중단 배포 실행
         gcloud compute ssh welspy-fastapi-backend --zone asia-northeast3-a --command "
           cd /home/moonwlsdnl/welspy-fastapi-backend/ && \
-          docker-compose -f docker-compose.yaml up -d --no-deps --build fastapi-backend && \
+          docker-compose -f docker-compose.yaml up -d --no-deps --build redis && \
           docker-compose -f docker-compose.yaml up -d --no-deps --build fastapi-backend
         "
     timeout: 500s
