--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,12 +3,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: asia.gcr.io/welspy-438208/welspy-fastapi-backend:2.1
+    image: asia.gcr.io/welspy-438208/welspy-fastapi-backend:2.2
     platform: linux/x86_64
     ports:
       - 8000:8000
     env_file:
       - ./.env.docker
+    depends_on:
+      - redis
 
   redis:
     image: redis:latest
