--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -17,7 +17,7 @@ steps:
           cd /home/moonwlsdnl/welspy-fastapi-backend/ && \
           docker-compose down || true && \
           docker-compose pull && \
-          docker-compose up -d
+          docker-compose up -d  --force-recreate
         "
     timeout: 500s
 
