--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,10 +10,8 @@ steps:
     args:
       - '-c'
       - |
-        gcloud secrets versions access latest --secret=env-docker > .env.docker
-
-        # SSH로 인스턴스에 접속하여 Docker Compose 실행
         gcloud compute ssh welspy-fastapi-backend --zone asia-northeast3-a --command "
+          echo '$(gcloud secrets versions access latest --secret=env-docker)' > /home/moonwlsdnl/welspy-fastapi-backend/.env.docker && \
           cd /home/moonwlsdnl/welspy-fastapi-backend/ && \
           docker-compose down || true && \
           docker-compose pull && \
