--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,7 +10,8 @@ steps:
     args:
       - '-c'
       - |
-        gcloud compute ssh welspy-fastapi-backend --zone asia-northeast3-a --command "
+        gcloud auth configure-docker asia.gcr.io
+        gcloud compute ssh welspy-fastapi-backend --project=welspy-438208 --zone=asia-northeast3-a --command "
           echo '$(gcloud secrets versions access latest --secret=env-docker)' > /home/moonwlsdnl/welspy-fastapi-backend/.env.docker && \
           cd /home/moonwlsdnl/welspy-fastapi-backend/ && \
           docker-compose down || true && \
