--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,23 +1,23 @@
-steps:
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:3.0', '.']
+# steps:
+#   - name: 'gcr.io/cloud-builders/docker'
+#     args: ['build', '-t', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:3.0', '.']
 
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:3.0']
+#   - name: 'gcr.io/cloud-builders/docker'
+#     args: ['push', 'asia.gcr.io/welspy-438208/welspy-fastapi-backend:3.0']
 
-  - name: 'gcr.io/cloud-builders/gcloud'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - |
-        gcloud auth configure-docker asia.gcr.io
-        gcloud compute ssh welspy-fastapi-backend --project=welspy-438208 --zone=asia-northeast3-a --command "
-          echo '$(gcloud secrets versions access latest --secret=env-docker)' > /home/moonwlsdnl/welspy-fastapi-backend/.env.docker && \
-          cd /home/moonwlsdnl/welspy-fastapi-backend/ && \
-          docker-compose down || true && \
-          docker-compose pull && \
-          docker-compose up -d  --force-recreate
-        "
-    timeout: 500s
-options:
-  logging: CLOUD_LOGGING_ONLY
+#   - name: 'gcr.io/cloud-builders/gcloud'
+#     entrypoint: 'bash'
+#     args:
+#       - '-c'
+#       - |
+#         gcloud auth configure-docker asia.gcr.io
+#         gcloud compute ssh welspy-fastapi-backend --zone asia-northeast3-a --command "
+#           echo '$(gcloud secrets versions access latest --secret=env-docker)' > /home/moonwlsdnl/welspy-fastapi-backend/.env.docker && \
+#           cd /home/moonwlsdnl/welspy-fastapi-backend/ && \
+#           docker-compose down || true && \
+#           docker-compose pull && \
+#           docker-compose up -d  --force-recreate
+#         "
+#     timeout: 500s
+# options:
+#   logging: CLOUD_LOGGING_ONLY
