--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: asia.gcr.io/welspy-438208/welspy-fastapi-backend:3.0
+    # image: asia.gcr.io/welspy-438208/welspy-fastapi-backend:3.0
     platform: linux/x86_64
     ports:
       - 8000:8000
